# types-clang

./: .gitignore  README.rst  build-all  generate-cindex  generate-project  generate_cindex.py  generate_common.py  mypy-missing-allowlist.txt  pyproject.toml
clang/: cindex.pyi  enumerations.pyi
clang-stubs/: __init__.pyi  cindex.pyi
templates/: cindex.pyi.jinja2
templates/gen-types-clang/: pyproject.toml.jinja2
templates/types-clang/: cindex.pyi.jinja2  pyproject.toml.jinja2
